[project]
name = "async-combinator"
version = "0.2.0"
description = ""
authors = [
    {name = "Kacper Wardega",email = "kwardega@stellarcyber.ai"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ruff = "^0.12.0"
pyright = "^1.1.402"
pdoc = "^15.0.4"
ipykernel = "^7.1.0"

[[tool.poetry.source]]
name = "stellarpypi"
url = "http://129.146.74.109:32081/repository/stellarpypi/"
priority = "supplemental"
